Fixed spacing issue on badges pages

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -68,12 +68,12 @@ span.text-content span {display: table-cell;text-align: center;vertical-align: m
 .fellow:hover span.text-content {opacity: 1;}
 
 
-.badgeholder 		{display: inline-block}
 .badge 				{background-image: url('../static/medal_blank.jpg'); height:175px; width: 202px;
 					 font: normal 18px "Lucida Console", "Lucida Sans Typewriter", Monaco, 
 					 "Bitstream Vera Sans Mono", monospace;
-					 text-align: center; vertical-align: top;}
+					 text-align: center; }
 .badgename			{font: bold 18px "Lucida Console", "Lucida Sans Typewriter", Monaco, 
 					"Bitstream Vera Sans Mono", monospace;}
+
 .badgetable tr 		{vertical-align: top;}
 .badgetable td 		{padding-left: 10px; padding-bottom: 40px;}
